--- a/zp_adminn/pages/fuli.html
+++ b/zp_adminn/pages/fuli.html
@@ -28,9 +28,9 @@
 			   
 		  </tbody>
 		</table>
-	<button type="button" id="btn_del" class="btn btn-danger text-center">
+<!-- 	<button type="button" id="btn_del" class="btn btn-danger text-center">
 			  删除
-	</button>
+	</button> -->
 </div>
 <style>
 	#btn_return{
