--- a/zp_adminn/pages/service.html
+++ b/zp_adminn/pages/service.html
@@ -2,7 +2,7 @@
 	<button type="button" id="btn_add" class="btn btn-primary float-right"  data-target="#exampleModal" data-toggle="modal">
 	 	 添加客服
  	</button>
- 	<button type="button" id="btn_return" class="btn btn-primary float-right"  data-target="#exampleModal" data-toggle="modal">
+ 	<button type="button" id="btn_return" class="btn btn-primary float-right">
 	 	 返回
  	</button>
  	
