--- a/zp_adminn/pages/apply.html
+++ b/zp_adminn/pages/apply.html
@@ -99,8 +99,8 @@
 		      	</div>
 		      </div>
 		      <div class="modal-footer">
-		        <button type="button" class="btn btn-secondary" onclick="closeApply_modal()">取消</button>
-		        <button id="btn_certainAddCustomer" type="button" class="btn btn-primary" onclick="submitRevise_modal()">确定</button>
+		       <!--  <button type="button" class="btn btn-secondary" >取消</button> -->
+		        <button id="btn_certainAddCustomer" type="button" class="btn btn-primary" onclick="closeApply_modal()">确定</button>
 		      </div>
 		    </div>
 		  </div>
